<resources>
    <string name="app_name">Telescope Client</string>
    <string name="action_settings">Einstellungen</string>
    <string name="action_calobjectslist">Kalibrier-Objekte</string>
    <string name="action_mylocation">Ort</string>
    <string name="action_mylocationlist">Orteliste</string>
    <string name="action_goTo">GoTo</string>
    <string name="buttonUp">Up</string>
    <string name="actualAction">\"Start\"</string>
    <string name="connect">Connect</string>
    <string name="clear">Clear</string>
    <string name="buttonDown">Down</string>
    <string name="buttonLeft">Left</string>
    <string name="buttonRight">Right</string>
    <string name="switchTrack">Track</string>
    <string name="title_activity_setting">Einstellungen</string>
    <string name="title_activity_calobjectslist">Kalibrierungsobjekte</string>
    <string name="title_activity_mylocation">Lokation</string>
    <string name="title_activity_mylocationlist">Lokationsliste</string>
    <string name="title_activity_mylocationedit">Lokationseditliste</string>
    <string name="title_activity_goTo">GoTo</string>
    <string name="preference_network">Netzwerk</string>
    <string name="preference_other">Diverses</string>
    <string name="preference_calibrate">Kalibrierung</string>
    <string name="preference_location">Kalibrierung</string>
    <string name="preference_ipadresse_title">IPAdresse</string>
    <string name="preference_ipadresse_key">IPAdresse</string>
    <string name="preference_ipadresse_summary">IPAdresse des Telescope Server</string>
    <string name="preference_ipadresse_default">10.0.0.17</string>
    <string name="preference_port_title">Port</string>
    <string name="preference_port_key">Port</string>
    <string name="preference_port_summary">Port des Telescope Server</string>
    <string name="preference_port_default">10000</string>
    <string name="preference_vibrate_title">Vibration</string>
    <string name="preference_vibrate_key">vibration</string>
    <string name="preference_vibrate_summary">Steuerung vibriert</string>
    <string name="preference_calobject_title">Kalibrierbaren Objekte</string>
    <string name="preference_calobject_key">CalObjekte</string>
    <string name="preference_calobject_summary">Ausgewähltes Objekte für die Kalibration</string>
    <string name="preference_gpslocation_title">GPS Location</string>
    <string name="preference_gpslocation_key">gpslocation</string>
    <string name="preference_gpslocation_summary">Location per GPS</string>
    <string name="preference_manlocation_title">Man Position</string>
    <string name="preference_manlocation_key">manlocation</string>
    <string name="preference_manlocation_summary">Location</string>
    <string name="preference_manlocation_default">Graz</string>
    <string name="preference_defaultswitch">Switch</string>
    <string name="preference_skyObject">Sterne</string>
    <string name="Latidude">Latitude</string>
    <string name="Longitude">Longitude</string>
    <string name="height">Höhe</string>
    <string name="acttitle_key">ActOrt</string>
    <string name="actbody_key">ActZusatz</string>
    <string name="actlatitude_key">Actlatitude</string>
    <string name="actlongitude_key">Actlongitude</string>
    <string name="actaltitude_key">Actaltitude</string>
    <string name="actrekt_key">Actrektaszensione</string>
    <string name="actdekl_key">Actdeklination</string>
    <string name="autocalibration">Autocalibration</string>
    <string name="Get_GPS">GPS abfragen</string>
    <string name="Rektaszension">Rektaszension</string>
    <string name="Deklination">Deklination</string>
    <string name="Info">No connection</string>
    <string name="calobjekt">KalibrationObjekt</string>
    <string name="loctb">Loction Tile u. Body</string>
    <string name="loclla">Long-\Lati-\Alitude</string>
    <string name="alttext">Altitude</string>
    <string name="porttext">Port</string>
    <string name="ipadressetext">IP Adresse</string>
    <string name="no_location">Kein Ort definiert</string>
    <string name="location_menu_insert">Ort einfügen</string>
    <string name="location_menu_settings">Einstellungen</string>
    <string name="location_menu_delete">Ort löschen</string>
    <string name="location_menu_set">Ort setzen</string>
    <string name="location_menu_edit">Ort editieren</string>
    <string name="location_save">Speichern</string>
    <string name="task_saved_message">Ort wird gespeichert</string>
    <string name="task_set_message">Ort wurde ausgewählt</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="set_loc">Set Lokation</string>
    <string name="format_switch">Format</string>


</resources>
