<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <PreferenceCategory
        android:title="Netzwerk"
        android:key="pref_key_storage_settings">
          <EditTextPreference
            android:title="@string/preference_ipadresse_title"
            android:key="@string/preference_ipadresse_key"
            android:summary="@string/preference_ipadresse_summary"
            android:defaultValue="@string/preference_ipadresse_default"
           android:inputType="textMultiLine" />
        <EditTextPreference
            android:title="@string/preference_port_title"
            android:key="@string/preference_port_key"
            android:summary="@string/preference_port_summary"
            android:defaultValue="@string/preference_port_default"
            android:inputType="number" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/preference_other">
        <CheckBoxPreference
            android:title="@string/preference_vibrate_title"
            android:key="@string/preference_vibrate_key"
            android:summary="@string/preference_vibrate_summary"
            android:defaultValue="false"/>
    </PreferenceCategory>
 </PreferenceScreen>
