<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".Hello_World">
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_calobjectslist" android:title="@string/action_calobjectslist"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_mylocation" android:title="@string/action_mylocation"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_mylocationlist" android:title="@string/action_mylocationlist"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_goTo" android:title="@string/action_goTo"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
