<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_hello__world" tools:context=".Hello_World"
    android:id="@+id/textresponse"
    android:clickable="false">


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect"
        android:id="@+id/connect"
        android:clickable="true"
        android:layout_below="@+id/calobject"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/buttonUp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:id="@+id/clear"
        android:clickable="true"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/response" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ipaddress"
        android:text="@string/ipadressetext"
        android:textStyle="bold"
        android:layout_above="@+id/clear"
        android:layout_alignEnd="@+id/clear" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Info"
        android:id="@+id/response"
        android:textIsSelectable="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/buttonRight"
        android:layout_below="@+id/buttonDown" />

    <Button
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/buttonUp"
        android:id="@+id/buttonUp"
        android:background="@drawable/object_up"
        android:clickable="true"
        android:layout_marginTop="42dp"
        android:layout_below="@+id/switchTrace"
        android:layout_centerHorizontal="true" />
    <Button
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/buttonDown"
        android:id="@+id/buttonDown"
        android:background="@drawable/object_down"
        android:layout_marginTop="80dp"
        android:layout_below="@+id/buttonUp"
        android:layout_alignEnd="@+id/buttonUp"
        android:layout_alignStart="@+id/buttonUp"
        android:clickable="true" />

    <Button
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/buttonLeft"
        android:background="@drawable/object_rotate_left"
        android:id="@+id/buttonLeft"
        android:layout_below="@+id/buttonUp"
        android:layout_alignEnd="@+id/connect"
        android:clickable="true"/>


    <Button
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/buttonRight"
        android:id="@+id/buttonRight"
        android:background="@drawable/object_rotate_right"
        android:clickable="true"
        android:layout_alignTop="@+id/buttonLeft"
        android:layout_toEndOf="@+id/buttonUp" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/switchTrack"
        android:id="@+id/switchTrace"
        android:clickable="true"
        android:longClickable="true"
        android:showText="false"
        android:checked="false"
        android:layout_below="@+id/connect"
        android:layout_toEndOf="@+id/calobject" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calobjekt"
        android:id="@+id/calobject"
        android:textIsSelectable="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/loclla"
        android:layout_toStartOf="@+id/buttonUp" />

    <TextView
        android:text="@string/actualAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/actualAction"
        android:layout_above="@+id/loclla"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loctb"
        android:id="@+id/loctb"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignEnd="@+id/connect" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loclla"
        android:id="@+id/loclla"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/buttonUp"
        android:layout_below="@+id/loctb" />

</RelativeLayout>
