<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="org.dddmuffi.myapplication.GoTo"
    android:clickable="true">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Rektaszension"
        android:id="@+id/textView"
        android:layout_below="@+id/switchFormat"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rekteditText"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:inputType="numberDecimal|numberSigned"
        android:clickable="true"        android:layout_toStartOf="@+id/textView"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rekteditText2"
        android:inputType="time"
        android:clickable="true"
        android:layout_below="@+id/rekteditText"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/rekteditText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Deklination"
        android:id="@+id/textView2"
        android:layout_below="@+id/rekteditText2"
        android:layout_alignEnd="@+id/switchFormat" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dekleditText"
        android:inputType="numberDecimal|numberSigned"
        android:clickable="true"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dekleditText2"
        android:inputType="time"
        android:clickable="true"
        android:autoText="false"
        android:linksClickable="false"
        android:layout_below="@+id/dekleditText"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/switchFormat"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/format_switch" />

</RelativeLayout>
